Resolve Modal Backdrop Not Covering Entire Page

--- a/app/assets/startup-framework/flat-ui/bootstrap/css/bootstrap.css
+++ b/app/assets/startup-framework/flat-ui/bootstrap/css/bootstrap.css
@@ -5138,6 +5138,7 @@ button.close {
 }
 .modal-backdrop {
   position: fixed;
+  height: 1000%;
   top: 0;
   right: 0;
   bottom: 0;
